@@ -2,3 +2,5 @@ SUBDIRS = src src/tools
 
 EXTRA_DIST = data/autocorrect/fi_FI.xml data/autocorrect/autocorrect.dtd
 
+ACLOCAL_AMFLAGS = -I m4
+
